// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stat should render a bar chart 1`] = `
<Card
  className="stats-card mb-3"
  tag="div"
>
  <CardBody
    tag="div"
  >
    <div
      className="stat-header mb-4"
    >
      <h5
        className="text-center"
      >
        Stat label
      </h5>
    </div>
    <div>
      <BarStat
        config={
          Immutable.Map {
            style: "bar",
          }
        }
        data={
          Immutable.Map {
          }
        }
        downloadStatistic={[Function]}
        downloadable={false}
        label="Stat label"
        legend={
          Immutable.Map {
          }
        }
        meta={
          Immutable.Map {
          }
        }
        name="stat_name"
        store={
          Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          }
        }
      />
    </div>
  </CardBody>
</Card>
`;

exports[`Stat should render a key metrics chart 1`] = `
<Card
  className="stats-card mb-3"
  tag="div"
>
  <CardBody
    tag="div"
  >
    <div
      className="stat-header mb-4"
    >
      <h5
        className="text-center"
      >
        Stat label
      </h5>
    </div>
    <div>
      <KeyMetricStat
        config={
          Immutable.Map {
            style: "key-metrics",
          }
        }
        data={
          Immutable.Map {
          }
        }
        downloadStatistic={[Function]}
        downloadable={false}
        label="Stat label"
        legend={
          Immutable.Map {
          }
        }
        meta={
          Immutable.Map {
          }
        }
        name="stat_name"
        store={
          Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          }
        }
      />
    </div>
  </CardBody>
</Card>
`;

exports[`Stat should render a line chart 1`] = `
<Card
  className="stats-card mb-3"
  tag="div"
>
  <CardBody
    tag="div"
  >
    <div
      className="stat-header mb-4"
    >
      <h5
        className="text-center"
      >
        Stat label
      </h5>
    </div>
    <div>
      <LineStat
        config={
          Immutable.Map {
            style: "line",
          }
        }
        data={
          Immutable.Map {
          }
        }
        downloadStatistic={[Function]}
        downloadable={false}
        label="Stat label"
        legend={
          Immutable.Map {
          }
        }
        meta={
          Immutable.Map {
          }
        }
        name="stat_name"
        store={
          Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          }
        }
      />
    </div>
  </CardBody>
</Card>
`;

exports[`Stat should render a table chart 1`] = `
<Card
  className="stats-card mb-3"
  tag="div"
>
  <CardBody
    tag="div"
  >
    <div
      className="stat-header mb-4"
    >
      <h5
        className="text-center"
      >
        Stat label
      </h5>
    </div>
    <div>
      <TableStat
        config={
          Immutable.Map {
            style: "table",
          }
        }
        data={
          Immutable.Map {
          }
        }
        downloadStatistic={[Function]}
        downloadable={false}
        label="Stat label"
        legend={
          Immutable.Map {
          }
        }
        meta={
          Immutable.Map {
          }
        }
        name="stat_name"
        store={
          Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          }
        }
      />
    </div>
  </CardBody>
</Card>
`;
